<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Czech Stocks</string>
    <string name="quotes">Quotes</string>
    <string name="trades">Trades</string>
    <string name="portfolio">Portfolio</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="add_stocks_dialog_title">Add Quotes to List</string>
    <string name="add_portfolio_item_dialog_title">Add Portfolio Item</string>
    <string name="remove_title">Remove</string>
    <string name="edit_remove_title">Edit or Remove</string>
    <string name="remove_stock_from_quotes_list">Remove %1$s from quotes list?</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="choose_stock_prompt">Pick a stock</string>
    <string name="number_of_stocks_hint">Number of stocks</string>
    <string name="number_of_stocks_err">Wrong value - Number of stocks</string>
    <string name="average_price_hint">Average price</string>
    <string name="average_price_err">Wrong value - Average price</string>
    <string name="currency">CZK</string>
    <string name="no_data_portfolio">Add items to portfolio by taping the + icon.</string>
    <string name="toas_check_net">Network error, check your internet connection</string>
    <string name="no_data_stocks_list">Attempting to download stock quotes from server. If this lasts too long, check your Intenet connection.</string>
    <string name="last_updated">Updated:</string>
    <string name="data_from">Data from:</string>
    <string name="total">TOTAL</string>
    <string name="no_other_stocks">There are no other stocks available.</string>

    <plurals name="pieces_bought_at">
        <item quantity="one">%d pc at</item>
        <item quantity="other">%d pcs at</item>
    </plurals>

    <string name="title_activity_add_to_stock_list">Add Quote</string>
    <string name="title_activity_stock_detail">Stock Detail</string>
    <string name="title_activity_add_portfolio_item">Add Portfolio Item</string>
    <string name="title_activity_edit_portfolio_item">Edit portfolio item</string>
    <string name="last_price">Last price</string>
    <string name="delta">Delta</string>
    <string name="p_e">P/E</string>
    <string name="dividends">Dividends</string>
    <string name="ex_date">Ex-date</string>
    <string name="payment_date">Payment date</string>
    <string name="amount">Amount</string>

    <string name="please_wait">Please wait</string>
    <string name="initializing_db">Initializing database</string>
    <string name="invested">Invested</string>
    <string name="delete_from_quotes_list_title">Remove from quotes list</string>
    <string name="do_you_want_to_delete_quote">Do you really want to remove %1$s from quotes list?</string>
    <string name="delete_from_portfolio_title">Remove from portfolio</string>
    <string name="do_you_want_to_delete_portfolio_item">Do you really want to remove %1$s from portfolio?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_delete">Delete</string>

    <string name="one_day">1D</string>
    <string name="one_month">1M</string>
    <string name="six_months">6M</string>
    <string name="one_year">1Y</string>
    <string name="five_years">5Y</string>
    <string name="all">All</string>
    <string name="action_add">Add</string>
    <string name="internet_not_available">Internet connection is not available</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

</resources>