<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="false"
        android:gravity="center" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_stocks_list" />

    <TextView
        android:id="@+id/lastUpdatedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_updated" />

    <TextView
        android:id="@+id/dataFromLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_from" />

</LinearLayout>