<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- dividends heading -->
    <TextView
        android:id="@+id/dividendsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dividends"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceSmall" />

    <LinearLayout
        android:id="@+id/dividendsListHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividendsLabel"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/ex_date"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/payment_date"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/amount"
            android:textAppearance="?android:textAppearanceSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/dividendsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dividendsListHeading" />

</LinearLayout>