<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context="zmuzik.czechstocks.StockDetailActivity.BasicInfoFragment">

    <TextView
        android:id="@+id/last_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/last_price"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/p_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/delta"
        android:layout_gravity="right" />

    <TextView
        android:id="@+id/last_price_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/last_price" />

    <TextView
        android:id="@+id/delta_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_price_label"
        android:text="@string/delta" />

    <TextView
        android:id="@+id/p_e_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/delta_label"
        android:text="@string/p_e" />

</RelativeLayout>
