<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/lastPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/lastPrice"
        android:layout_gravity="right"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/pe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/delta"
        android:layout_gravity="right"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/lastPriceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/last_price"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/deltaLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastPriceLabel"
        android:text="@string/delta"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/peLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/deltaLabel"
        android:text="@string/p_e"
        android:textAppearance="?android:textAppearanceMedium" />

</RelativeLayout>
